Da xong nhung chua responsive

--- a/index.html
+++ b/index.html
@@ -277,20 +277,7 @@
                                                 </div>
                                             </li>
                                         </a>
-                                        <a href="#" class="app__header-notice-link app__header-notice--has-color">
-                                            <li class="app__header-notice-item">
-                                                <div class="app__header-notice-dictionary">
-                                                    <img src="assets/img/conan_2.png" alt="Ảnh đại diện"
-                                                        class="app__header-notice-picture">
-                                                </div>
-                                                <div class="app__header-notice-note">
-                                                    <p class="app__header-note-content">
-                                                        CAĐĐ vừa gửa bạn lời mời kết bạn
-                                                    </p>
-                                                    <span class="app__header-notice-note-item">Chưa xem</span>
-                                                </div>
-                                            </li>
-                                        </a>
+                                        
                                         <a href="#" class="app__header-notice-link">
                                             <li class="app__header-notice-item">
                                                 <div class="app__header-notice-dictionary">
@@ -323,7 +310,7 @@
                                                         class="app__header-notice-picture">
                                                 </div>
                                                 <div class="app__header-notice-note">
-                                                    <p class="app__header-note-content">Giáo sư chỉ bạn đã nhắm tin cho bạn
+                                                    <p class="app__header-note-content">Giáo sư chỉ bạn đã nhắn tin cho bạn
                                                     </p>
                                                     <span class="app__header-notice-note-item">Chưa xem</span>
                                                 </div>
@@ -388,7 +375,7 @@
                                                         class="app__header-notice-picture">
                                                 </div>
                                                 <div class="app__header-notice-note">
-                                                    <p class="app__header-note-content">Nhà Thơ Tấn Lỗ vừa nhắn tin hco bạn
+                                                    <p class="app__header-note-content">Nhà Thơ Tấn Lỗ vừa nhắn tin cho bạn
                                                     </p>
                                                     <span class="app__header-notice-note-item">Chưa xem</span>
                                                 </div>
