--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
     <div class="app">
         <header>
             <div class="container-fluid">
-                <div class="app__header">
+                <div class="app__header" id="app__header-res">
                     <!-- nav head -->
-                    <nav class="app__header-head">
+                    <nav class="app__header-head" id="app__header-head-res">
                         <ul class="app__header-head-list-up">
-                            <li class="app__header-head-item-up">
+                            <li class="app__header-head-item-up" id="app__header-head-item-up-res">
                                 <i class="app__header-heading-bigIcon fa-brands fa-joomla"></i>
                                 <h2 class="app__header-heading">
                                     Course For All
@@ -36,7 +36,7 @@
                             </li>
                         </ul>
 
-                        <div class="app__header-head-search">
+                        <div class="app__header-head-search" id="app__header-head-search-res">
                             <input type="text" list="items" class="app__header-head-inp"
                                 placeholder="Từ khóa tìm kiếm..!">
                             <div class="app__header-head-icon">
@@ -53,11 +53,11 @@
                             </div>
                         </div>
 
-                        <ul class="app__header-head-list-down">
+                        <ul class="app__header-head-list-down" id="app__header-head-list-down-res">
                             <li class="app__header-head-item-down">
                                 <a href="#app__header-head-target" class="app__header-head-link">
-                                    <i class="fa-solid fa-comments"></i>
-                                    <span class="app__header-head-pointer">+</span>
+                                    <i class="fa-solid fa-comments" ></i>
+                                    <span class="app__header-head-pointer" id="app__header-head-pointer-res">+</span>
                                     Tin nhắn
                                 </a>
                                 <!-- Thông tin trong phần tin nhắn -->
@@ -198,7 +198,7 @@
                                             <a href="#" class="app__header-msg-link">
 
                                                 <div class="app__header-msg-avartar">
-                                                    <img src="http://127.0.0.1:5500/assets/img/conan.jpg"
+                                                    <img src="assets/img/conan.jpg"
                                                         alt="Ảnh đại diện" class="app__header-msg-picture">
                                                 </div>
                                                 <div class="app__header-msg-content">
@@ -214,9 +214,9 @@
                                 </div>
                             </li>
                             <li class="app__header-head-item-down app__header-head-item-has-notice">
-                                <a href="#" class="app__header-head-link">
+                                <a href="#" class="app__header-head-link" id="app__header-head-link-res">
                                     <i class="fa-solid fa-bell"></i>
-                                    <span class="app__header-head-pointer">+</span>
+                                    <span class="app__header-head-pointer" id="app__header-head-pointer-res">+</span>
                                     <span class="app__header-head-content">Thông báo</span>
                                 </a>
                                 <!-- Thông tin bên trong thông báo -->
@@ -439,12 +439,12 @@
                     </nav>
 
                     <!-- nav end -->
-                    <nav class="app__header-end">
+                    <nav class="app__header-end" id="app__header-end-res">
                         <div class="mobie__responsive">
                             <div class="app__header-end-left">
                                 <ul class="app__header-end-list app__header-end--flexLeft">
                                     <li class="app__header-end-item">
-                                        <a href="#app__header-end-has-introduce" class="app__header-end-link">
+                                        <a href="#app__header-end-has-introduce" class="app__header-end-link" id="app__header-head-link-res">
                                             <img src="assets/img/icon_people.png" alt="Ảnh về chúng tôi"
                                                 class="app__header-end-picture">
                                             Giới thiệu
@@ -470,7 +470,7 @@
                                         </div>
                                     </li>
                                     <li class="app__header-end-item app__header-end-item-has-course">
-                                        <a href="#" class="app__header-end-link">
+                                        <a href="#" class="app__header-end-link" id="app__header-head-link-res">
                                             <img src="assets/img/myCourse_2.png" alt="Ảnh khóa học của tôi"
                                                 class="app__header-end-picture">
                                             My course
@@ -560,7 +560,7 @@
                                         </div>
                                     </li>
                                     <li class="app__header-end-item app__header-end-item-has-follower">
-                                        <a href="#" class="app__header-end-link">
+                                        <a href="#" class="app__header-end-link" id="app__header-head-link-res">
                                             <img src="assets/img/icon_follower_3.png" alt="Ảnh follow"
                                                 class="app__header-end-picture">
                                             Follower
@@ -744,7 +744,7 @@
                             <div class="app__header-end-right">
                                 <ul class="app__header-end-list app__header-end--flexRight">
                                     <li class="app__header-end-item app__header-end-item-has-viewer">
-                                        <a href="#" class="app__header-end-link">
+                                        <a href="#" class="app__header-end-link" id="app__header-head-link-res">
                                             <img src="assets/img/Dang_follow.png" alt="Ảnh đang follow"
                                                 class="app__header-end-picture">
                                             Đang Follow
@@ -834,7 +834,7 @@
                                     </li>
 
                                     <li class="app__header-end-item app__header-end-item-has-donate">
-                                        <a href="#" class="app__header-end-link">
+                                        <a href="#" class="app__header-end-link" id="app__header-head-link-res">
                                             <img src="assets/img/icon_donate.png" alt="Ảnh icon_donate"
                                                 class="app__header-end-picture">
                                             Ủng hộ
@@ -967,7 +967,7 @@
                                     </li>
 
                                     <li class="app__header-end-item app__header-head-item-has-information">
-                                        <a href="#" class="app__header-end-link">
+                                        <a href="#" class="app__header-end-link" id="app__header-head-link-res">
                                             <img src="assets/img/icon_connection_2.png" alt="Ảnh kết nối"
                                                 class="app__header-end-picture">
                                             <span class="app__header-head-content">Kết nối</span>
@@ -1024,7 +1024,7 @@
         </header>
 
 
-        <main class="app__container">
+        <main class="app__container" id="app__container-res">
             <div class="container-fluid">
                 <div id="carouselExampleIndicators" class="carousel slide carousel__mod" data-bs-ride="true">
                     <div class="carousel-indicators">
@@ -1155,8 +1155,6 @@
                                     <li class="app__container-advertisement-item">
 
                                         <h3 class="app__container-advertisement-head head--switch-color-1">Khóa học võ cấp tốc</h3>
-
-
                                         <p class="app__container-advertisement-description">Tham gia khóa học này bạn sẽ học được những môn
                                             võ đã thất truyền như:
                                         </p>
@@ -1192,8 +1190,8 @@
             </div>
             <div class="container-fluid app__container-main-width">
                 <div class="row ">
-                    <div class="col-1 app__container-col-1">
-                        <div class="app__container-icon app__container-icon--sticky">
+                    <div class="col-1 app__container-col-1" >
+                        <div class="app__container-icon app__container-icon--sticky" id="app__container-icon--sticky-res">
                             <ul class="app__container-list">
                                 <li class="app__container-item">
                                     <a href="#" class="app__container-link">
@@ -1230,8 +1228,8 @@
 
 
                     </div>
-                    <div class="col-6 col-xl-11 app__container-col-11">
-                        <h1 class="app__container-heading">
+                    <div class="col-6 col-xl-11 container-fluid  app__container-col-11">
+                        <h1 class="app__container-heading" id="app__container-mobile-responsive">
                             Danh sách các khóa học
                         </h1>
                         <div class="app__container-course">
@@ -1240,7 +1238,7 @@
                                 <div class="col">
                                     <div class="p-3">
                                         <a href="https://youtube.com/playlist?list=PLE1qPKuGSJaCXBMB3FBzl45imx7rkKR5Y"
-                                            class="app__container-course-link">
+                                            class="app__container-course-link" id="app__container-course-link-res">
                                             <div class="app__container-course-photo">
                                                 <p class="app__container-course-content">C++</p>
                                                 <img src="assets/img/Ảnh_phần_main+C++.png" alt="Ảnh khóa học"
@@ -1275,7 +1273,7 @@
                                 <div class="col">
                                     <div class="p-3">
                                         <a href="https://youtube.com/playlist?list=PLyxSzL3F748401hWFgJ8gKMnN6MM8QQ7F"
-                                            class="app__container-course-link app__container-course-link-java">
+                                            class="app__container-course-link app__container-course-link-java" id="app__container-course-link-res">
                                             <div class="app__container-course-photo">
                                                 <p class="app__container-course-content">Java</p>
                                                 <img src="assets/img/Ảnh_phần_main+Java_2.png" alt="Ảnh khóa học"
