Da xong - di buoi sưa nua

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         <ul class="app__header-head-list-down" id="app__header-head-list-down-res">
                             <li class="app__header-head-item-down">
                                 <a href="#app__header-head-target" class="app__header-head-link">
-                                    <i class="fa-solid fa-comments" ></i>
+                                    <i class="fa-solid fa-comments"></i>
                                     <span class="app__header-head-pointer" id="app__header-head-pointer-res">+</span>
                                     Tin nhắn
                                 </a>
@@ -198,8 +198,8 @@
                                             <a href="#" class="app__header-msg-link">
 
                                                 <div class="app__header-msg-avartar">
-                                                    <img src="assets/img/conan.jpg"
-                                                        alt="Ảnh đại diện" class="app__header-msg-picture">
+                                                    <img src="assets/img/conan.jpg" alt="Ảnh đại diện"
+                                                        class="app__header-msg-picture">
                                                 </div>
                                                 <div class="app__header-msg-content">
                                                     <h2 class="app__header-msg-userName">CAND</h2>
@@ -444,7 +444,8 @@
                             <div class="app__header-end-left">
                                 <ul class="app__header-end-list app__header-end--flexLeft">
                                     <li class="app__header-end-item">
-                                        <a href="#app__header-end-has-introduce" class="app__header-end-link" id="app__header-head-link-res">
+                                        <a href="#app__header-end-has-introduce" class="app__header-end-link"
+                                            id="app__header-head-link-res">
                                             <img src="assets/img/icon_people.png" alt="Ảnh về chúng tôi"
                                                 class="app__header-end-picture">
                                             Giới thiệu
@@ -1154,21 +1155,22 @@
                                 <ul class="app__container-advertisement-list-up">
                                     <li class="app__container-advertisement-item">
 
-                                        <h3 class="app__container-advertisement-head head--switch-color-1">Khóa học võ cấp tốc</h3>
-                                        <p class="app__container-advertisement-description">Tham gia khóa học này bạn sẽ học được những môn
+                                        <h3 class="app__container-advertisement-head head--switch-color-1">Khóa học võ
+                                            cấp tốc</h3>
+                                        <p class="app__container-advertisement-description">Tham gia khóa học này bạn sẽ
+                                            học được những môn
                                             võ đã thất truyền như:
                                         </p>
                                         <p class="app__container-advertisement-description">
                                             Hàng Long Thập Ba Chưởng, Dịch Cân kinh, Cách tự vệ ki bị chó đuổi,...
                                         </p>
-                                        <a href="https://youtu.be/DGXqum4lk0Q"
-                                            class="learn-about-link"><button class="learn-about-btn-1">Tìm hiểu
+                                        <a href="https://youtu.be/DGXqum4lk0Q" class="learn-about-link"><button
+                                                class="learn-about-btn-1">Tìm hiểu
                                                 thêm</button></a>
                                     </li>
                                 </ul>
                                 <ul class="app__container-advertisement-list-down">
-                                    <li class="app__container-advertisement-item"><img
-                                            src="assets/img/kungfu.png"
+                                    <li class="app__container-advertisement-item"><img src="assets/img/kungfu.png"
                                             alt="Ảnh slider" class="carousel-item-picture"></li>
                                 </ul>
                             </div>
@@ -1190,8 +1192,9 @@
             </div>
             <div class="container-fluid app__container-main-width">
                 <div class="row ">
-                    <div class="col-1 app__container-col-1" >
-                        <div class="app__container-icon app__container-icon--sticky" id="app__container-icon--sticky-res">
+                    <div class="col-1 app__container-col-1">
+                        <div class="app__container-icon app__container-icon--sticky"
+                            id="app__container-icon--sticky-res">
                             <ul class="app__container-list">
                                 <li class="app__container-item">
                                     <a href="#" class="app__container-link">
@@ -1273,7 +1276,8 @@
                                 <div class="col">
                                     <div class="p-3">
                                         <a href="https://youtube.com/playlist?list=PLyxSzL3F748401hWFgJ8gKMnN6MM8QQ7F"
-                                            class="app__container-course-link app__container-course-link-java" id="app__container-course-link-res">
+                                            class="app__container-course-link app__container-course-link-java"
+                                            id="app__container-course-link-res">
                                             <div class="app__container-course-photo">
                                                 <p class="app__container-course-content">Java</p>
                                                 <img src="assets/img/Ảnh_phần_main+Java_2.png" alt="Ảnh khóa học"
