--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
     <link rel="shortcut icon" href="assets/img/Avartar.jpg" type="/favicon.jbg">
     <title>Course For All</title>
 </head>
-
 <body>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <div class="app">
@@ -411,6 +410,10 @@
                                     <hr class="app__header-avartar-separator">
                                     <ul class="app__header-avartar-list">
                                         <a href="#" class="app__header-avartar-link">
+                                            <li class="app__header-avartar-list-item">Tổng tài sản: <i class="fa-solid fa-infinity"></i></li>
+                                        </a>
+                                        <hr class="app__header-avartar-separator">
+                                        <a href="#" class="app__header-avartar-link">
                                             <li class="app__header-avartar-list-item">Trang cá nhân</li>
                                         </a>
                                         <hr class="app__header-avartar-separator">
@@ -464,6 +467,19 @@
                                                     <hr class="app__header-end-introduce-separator">
                                                     <div class="app__header-end-introduce-main">
                                                         <p class="app__header-end-introduce-paragraph">
+                                                            Trang web của nhóm 8
+                                                            <ul class="app__header-end-introduce-paragraph-list">
+                                                                <li class="app__header-end-introduce-paragraph-item">Chức năng web là đưa người dùng đến các khóa học miễn phí</li>
+                                                                <li class="app__header-end-introduce-paragraph-item">Cho phép người dùng đóng góp khóa học</li>
+                                                                <li class="app__header-end-introduce-paragraph-item">Kết nối đến các nền tảng mạng xã hội khác</li>
+                                                                <li class="app__header-end-introduce-paragraph-item">Donate cho người dùng khác</li>
+                                                                <li class="app__header-end-introduce-paragraph-item">Nhắn tin với người dùng khác</li>
+                                                                <li class="app__header-end-introduce-paragraph-item">Lưu khóa học và xem tiến trình học của bản thân</li>
+                                                            </ul>
+                                                            <p class="app__header-end-introduce-paragraph-2">
+                                                                Trang web được lên ý tưởng từ: <a href="https://fullstack.edu.vn/">web này</a>
+                                                            </p>    
+                                                         
                                                         </p>
                                                     </div>
                                                 </div>
@@ -762,8 +778,7 @@
                                                                 alt="Ảnh đại diện" class="app__header-end-viewer-photo">
                                                             <div class="app__header-end-viewer-content">
                                                                 <h3 class="app__header-end-viewer-userName">Hiệptk</h3>
-                                                                <p class="app__header-end-viewer-description">@hieptuan
-                                                                </p>
+                                                                <p class="app__header-end-viewer-description">@hieptuan</p>
                                                             </div>
                                                         </div>
                                                         <div class="app__header-end-viewer-icon">
@@ -799,10 +814,8 @@
                                                                 <div class="app__header-end-viewer-content">
                                                                     <h3 class="app__header-end-viewer-userName">Quỳnh
                                                                         <h3>
-                                                                            <p
-                                                                                class="app__header-end-viewer-description">
-                                                                                @QuynhLe
-                                                                            </p>
+                                                                            <p class="app__header-end-viewer-description">@QuynhLe</p>
+                                                                            
                                                                 </div>
                                                             </div>
                                                             <div class="app__header-end-viewer-icon">
@@ -978,37 +991,37 @@
                                             <h2 class="app__header-information-head">Kết nối với chúng tôi:</h2>
                                             <ul class="app__header-information-list">
                                                 <li class="app__header-information-item">
-                                                    <a href="" class="app__header-information-link">
+                                                    <a href="https://www.facebook.com/" class="app__header-information-link">
                                                         <i class="fa-brands fa-facebook"></i>
                                                     </a>
                                                 </li>
                                                 <li class="app__header-information-item">
-                                                    <a href="" class="app__header-information-link">
+                                                    <a href="https://www.facebook.com/messages/t/100014706976526/" class="app__header-information-link">
                                                         <i class="fa-brands fa-facebook-messenger"></i>
                                                     </a>
                                                 </li>
                                                 <li class="app__header-information-item">
-                                                    <a href="" class="app__header-information-link">
+                                                    <a href="https://twitter.com/home" class="app__header-information-link">
                                                         <i class="fa-brands fa-twitter"></i>
                                                     </a>
                                                 </li>
                                                 <li class="app__header-information-item">
-                                                    <a href="" class="app__header-information-link">
+                                                    <a href="https://www.tiktok.com/vi-VN" class="app__header-information-link">
                                                         <i class="fa-brands fa-tiktok"></i>
                                                     </a>
                                                 </li>
                                                 <li class="app__header-information-item">
-                                                    <a href="" class="app__header-information-link">
+                                                    <a href="https://www.reddit.com/" class="app__header-information-link">
                                                         <i class="fa-brands fa-reddit"></i>
                                                     </a>
                                                 </li>
                                                 <li class="app__header-information-item">
-                                                    <a href="" class="app__header-information-link">
+                                                    <a href="https://github.com/" class="app__header-information-link">
                                                         <i class="fa-brands fa-github"></i>
                                                     </a>
                                                 </li>
                                                 <li class="app__header-information-item">
-                                                    <a href="" class="app__header-information-link">
+                                                    <a href="https://www.linkedin.com/feed/" class="app__header-information-link">
                                                         <i class="fa-brands fa-linkedin"></i>
                                                     </a>
                                                 </li>
@@ -2237,5 +2250,4 @@
     <script src="assets/bootstrap/bootstrap-5.2.1-dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/bootstrap/bootstrap-5.2.1-dist/js/bootstrap.min.js"></script>
 </body>
-
 </html>
