--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
 <body>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <div class="app">
-
         <header>
             <div class="container-fluid">
                 <div class="app__header" id="app__header-res">
@@ -253,7 +252,7 @@
                                                         class="app__header-msg-picture">
                                                 </div>
                                                 <div class="app__header-msg-content">
-                                                    <h2 class="app__header-msg-userName">Anh Long Áo Đen</h2>
+                                                    <h2 class="app__header-msg-userName">Bác Sĩ Hải Áo Đen</h2>
                                                     <span class="app__header-msg-Messages">Em chỉ chi tiết cho anh
                                                         nhé?</span>
                                                     <span aria-hidden="true"> . </span>
@@ -261,26 +260,12 @@
                                                 </div>
                                             </a>
                                         </li>
-                                        <li class="app__header-notice-link app__header-msg-item">
-                                            <a href="#" class="app__header-msg-link">
-
-                                                <div class="app__header-msg-avartar">
-                                                    <img src="assets/img/conan.jpg" alt="Ảnh đại diện"
-                                                        class="app__header-msg-picture">
-                                                </div>
-                                                <div class="app__header-msg-content">
-                                                    <h2 class="app__header-msg-userName">CAND</h2>
-                                                    <span class="app__header-msg-Messages">Anh thấy rất hay nhé!!</span>
-                                                    <span aria-hidden="true"> . </span>
-                                                    <span data-testid="timestamp" class=""> 27 phút</span>
-                                                </div>
-                                            </a>
-                                        </li>
+                                       
 
                                     </ul>
                                     <hr>
                                     <div class="app__header-msg-seeAll">
-                                        <a href="#" class="app__header-msg-seeAll-link">Xem tất cả</a>
+                                        <a href="message.html" class="app__header-msg-seeAll-link">Xem tất cả</a>
                                     </div>
                                 </div>
                             </li>
@@ -305,20 +290,6 @@
                                                     <p class="app__header-note-content">Quỳnh vừa mới thêm một khóa học
                                                         mới</p>
                                                     <span class="app__header-notice-note-item">Chưa xem</span>
-                                                </div>
-                                            </li>
-                                        </a>
-                                        <a href="#" class="app__header-notice-link">
-                                            <li class="app__header-notice-item">
-                                                <div class="app__header-notice-dictionary">
-                                                    <img src="http://127.0.0.1:5500/assets/img/conan.jpg"
-                                                        alt="Ảnh đại diện" class="app__header-notice-picture">
-                                                </div>
-                                                <div class="app__header-notice-note_1">
-                                                    <p class="app__header-note-content">
-                                                        CAND đã nhắn tin cho bạn
-                                                    </p>
-                                                    <span class="app__header-notice-note-item_1">Đã xem</span>
                                                 </div>
                                             </li>
                                         </a>
@@ -1136,7 +1107,7 @@
                             id="app__container-icon--sticky-res">
                             <ul class="app__container-list" id="app__container-list-res">
                                 <li class="app__container-item">
-                                    <a href="#" class="app__container-link">
+                                    <a href="index.html" class="app__container-link">
                                         <i class="fa-solid fa-house"></i>
                                         <span class="app__container-paragram">Home</span>
                                     </a>
@@ -2168,8 +2139,6 @@
             </footer>
             <!-- Footer -->
         </div>
-
-
     </div>
     <script src="assets/bootstrap/bootstrap-5.2.1-dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/bootstrap/bootstrap-5.2.1-dist/js/bootstrap.min.js"></script>
