Xong trang mess

--- a/index.html
+++ b/index.html
@@ -2018,126 +2018,116 @@
 
 
         <div class="app_footer">
-            <!-- Footer -->
-            <footer class="text-center text-lg-end bg-dark text-muted">
-                <!-- Section: Social media -->
-                <section class="d-flex p-4 border-bottom">
-                    <!-- Left -->
-
-                    <!-- Left -->
-
-                    <!-- Right -->
-                    <div>
-                        <a href="" class="me-4 link-secondary">
-                            <i class="fab fa-facebook-f"></i>
-                        </a>
-                        <a href="" class="me-4 link-secondary">
-                            <i class="fab fa-twitter"></i>
-                        </a>
-                        <a href="" class="me-4 link-secondary">
-                            <i class="fab fa-google"></i>
-                        </a>
-                        <a href="" class="me-4 link-secondary">
-                            <i class="fab fa-instagram"></i>
-                        </a>
-                        <a href="" class="me-4 link-secondary">
-                            <i class="fab fa-linkedin"></i>
-                        </a>
-                        <a href="" class="me-4 link-secondary">
-                            <i class="fab fa-github"></i>
-                        </a>
-                    </div>
-                    <!-- Right -->
+            <div class="app__mess-footer">
+                <section class="app__mess-footer-head">
+                    <ul class="app__mess-footer-head-list">
+                        <li class="app__mess-footer-head-item">
+                            <a href="https://www.facebook.com/" class="app__mess-footer-head-link"><i
+                                    class="fa-brands fa-facebook"></i></a>
+                        </li>
+                        <li class="app__mess-footer-head-item">
+                            <a href="https://twitter.com/home" class="app__mess-footer-head-link"><i
+                                    class="fa-brands fa-twitter"></i></a>
+                        </li>
+                        <li class="app__mess-footer-head-item">
+                            <a href="https://www.reddit.com/" class="app__mess-footer-head-link"><i
+                                    class="fa-brands fa-reddit"></i></a>
+                        </li>
+                        <li class="app__mess-footer-head-item">
+                            <a href="https://www.tiktok.com/vi-VN" class="app__mess-footer-head-link"><i
+                                    class="fa-brands fa-tiktok"></i></a>
+                        </li>
+                        <li class="app__mess-footer-head-item">
+                            <a href="https://github.com/" class="app__mess-footer-head-link"><i
+                                    class="fa-brands fa-github"></i></a>
+                        </li>
+                        <li class="app__mess-footer-head-item">
+                            <a href="https://www.linkedin.com/feed/" class="app__mess-footer-head-link"><i
+                                    class="fa-brands fa-linkedin"></i></a>
+                        </li>
+                    </ul>
                 </section>
-                <!-- Section: Social media -->
-
-                <!-- Section: Links  -->
-                <section class="">
-                    <div class="container text-center text-md-start mt-5">
-                        <!-- Grid row -->
-                        <div class="row mt-3">
-                            <!-- Grid column -->
-                            <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
-                                <!-- Content -->
-                                <h6 class="text-uppercase fw-bold mb-4">
-                                    <i class="fas fa-gem me-3 text-secondary"></i>Company name
-                                </h6>
-                                <p>
-                                    Nhóm 8 làm bài tập lớn B1 môn Phát triển ứng dụng web
-                                </p>
-                            </div>
-                            <!-- Grid column -->
-
-                            <!-- Grid column -->
-                            <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
-                                <!-- Links -->
-                                <h6 class="text-uppercase fw-bold mb-4">
-                                    Products
-                                </h6>
-                                <p>
-                                    <a href="#!" class="text-reset">Khóa học lập trình</a>
-                                </p>
-                                <p>
-                                    <a href="#!" class="text-reset">Khóa học lập trình nâng cao</a>
-                                </p>
-                                <p>
-                                    <a href="#!" class="text-reset">Khóa học làm game</a>
-                                </p>
-                                <p>
-                                    <a href="#!" class="text-reset">Khóa học võ</a>
-                                </p>
-                            </div>
-                            <!-- Grid column -->
-
-                            <!-- Grid column -->
-                            <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
-                                <!-- Links -->
-                                <h6 class="text-uppercase fw-bold mb-4">
-                                    Useful links
-                                </h6>
-                                <p>
-                                    <a href="#!" class="text-reset">Pricing</a>
-                                </p>
-                                <p>
-                                    <a href="#!" class="text-reset">Settings</a>
-                                </p>
-                                <p>
-                                    <a href="#!" class="text-reset">Orders</a>
-                                </p>
-                                <p>
-                                    <a href="#!" class="text-reset">Help</a>
-                                </p>
-                            </div>
-                            <!-- Grid column -->
-
-                            <!-- Grid column -->
-                            <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
-                                <!-- Links -->
-                                <h6 class="text-uppercase fw-bold mb-4">Contact</h6>
-                                <p><i class="fas fa-home me-3 text-secondary"></i> Số 18 Phố Viên - Phường Đức Thắng -
-                                    Q. Bắc Từ Liêm - Hà Nội</p>
-                                <p>
-                                    <i class="fas fa-envelope me-3 text-secondary"></i>
-                                    Namdeptrai123x2321@gmail.com
-                                </p>
-                                <p><i class="fas fa-phone me-3 text-secondary"></i> + 039xxxxxx421</p>
-                                <p><i class="fas fa-print me-3 text-secondary"></i> + 097xxxxxx451</p>
-                            </div>
-                            <!-- Grid column -->
-                        </div>
-                        <!-- Grid row -->
+                <hr class="he">
+                <section class="app__mess-footer-head-mid">
+                    <div class="app__mess-footer-head-company">
+                        <h2 class="app__mess-footer-head-company-title">
+                            Nhóm 8(Nam & Ly)
+                        </h2>
+                        <p class="app__mess-footer-head-company-content">
+                            Bài tập lớn điểm B1 môn Phát triển ứng dụng web của nhóm 8
+                        </p>
+                    </div>
+                    <div class="app__mess-footer-head-products">
+                        <h2 class="app__mess-footer-head-products-title">
+                            Các Sản Phẩm:
+                        </h2>
+                        <ul class="app__mess-footer-head-products-list">
+                            <li class="app__mess-footer-head-products-item">
+                                Các khóa học lập trình
+                            </li>
+                            <li class="app__mess-footer-head-products-item">
+                                Các khóa học thiết kế đồ họa
+                            </li>
+                            <li class="app__mess-footer-head-products-item">
+                                Các khóa học dựng video
+                            </li>
+    
+                            <li class="app__mess-footer-head-products-item">
+                                Các khóa học võ
+                            </li>
+                            <li class="app__mess-footer-head-products-item">
+                                ....
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="app__mess-footer-head-setting">
+                        <h2 class="app__mess-footer-head-setting">
+                            Hỗ Trợ:
+                        </h2>
+                        <ul class="app__mess-footer-head-setting-list">
+                            <li class="app__mess-footer-head-setting-item">
+                                Server 1
+                            </li>
+                            <li class="app__mess-footer-head-setting-item">
+                                Server 2
+                            </li>
+                            <li class="app__mess-footer-head-setting-item">
+                                Server 3
+                            </li>
+                            <li class="app__mess-footer-head-setting-item">
+                                Server 4
+                            </li>
+                        </ul>
+                        
+                    </div>
+                    <div class="app__mess-footer-head-contact">
+                        <h2 class="app__mess-footer-head-contact-title">
+                            Liên Hệ Với Chúng Tôi:
+                        </h2>
+                        <ul class="app__mess-footer-head-contact-list">
+                            <li class="app__mess-footer-head-contact-item">
+                                <i class="fa-solid fa-house"></i>
+                                Số 18 Phố Viên - Phường Đức Thắng - Q. Bắc Từ Liêm - Hà Nội
+                            </li>
+                            <li class="app__mess-footer-head-contact-item">
+                                <i class="fa-sharp fa-solid fa-envelope"></i>
+                                Namdeptrai123x2321@gmail.com
+                            </li>
+                            <li class="app__mess-footer-head-contact-item">
+                                <i class="fa-solid fa-phone"></i>
+                                + 039xxxxxx421
+                            </li>
+                            <li class="app__mess-footer-head-contact-item">
+                                <i class="fa-solid fa-phone"></i>
+                                + 097xxxxxx451
+                            </li>
+                        </ul>
                     </div>
                 </section>
-                <!-- Section: Links  -->
-
-                <!-- Copyright -->
-                <div class="text-center" style="background-color: rgba(0, 0, 0, 0.025);">
-                    © 2021 Copyright:
-                    <a class="text-reset fw-bold" href="\">Hotdog.com</a>
-                </div>
-                <!-- Copyright -->
-            </footer>
-            <!-- Footer -->
+                <section class="app__mess-footer-head-down">
+                    <p>© 2022 Copyright: <a href="#" class="app__mess-footer-head-down-link">Hotdog.com</a></p>
+                </section>
+            </div>
         </div>
     </div>
     <script src="assets/bootstrap/bootstrap-5.2.1-dist/js/bootstrap.bundle.min.js"></script>
