--- a/index.html
+++ b/index.html
@@ -1113,27 +1113,21 @@
                                     </a>
                                 </li>
                                 <li class="app__container-item">
-                                    <a href="#" class="app__container-link">
-                                        <i class="fa-solid fa-user"></i>
-                                        <span class="app__container-paragram">User</span>
-                                    </a>
-                                </li>
-                                <li class="app__container-item">
-                                    <a href="#" class="app__container-link">
+                                    <a href="Phần-LOTRINH.html" class="app__container-link">
                                         <i class="fa-solid fa-road"></i>
                                         <span class="app__container-paragram ">Lộ trình</span>
                                     </a>
                                 </li>
                                 <li class="app__container-item">
-                                    <a href="#" class="app__container-link">
+                                    <a href="Phần-BANGTIN.html" class="app__container-link">
                                         <i class="fa-solid fa-newspaper"></i>
                                         <span class="app__container-paragram">Bảng tin</span>
                                     </a>
                                 </li>
                                 <li class="app__container-item">
-                                    <a href="#" class="app__container-link">
-                                        <i class="fa-solid fa-lightbulb"></i>
-                                        <span class="app__container-paragram ">Học</span>
+                                    <a href="message.html" class="app__container-link">
+                                        <i class="fa-regular fa-message"></i>
+                                        <span class="app__container-paragram ">Nhắn tin</span>
                                     </a>
                                 </li>
                             </ul>
@@ -1141,7 +1135,7 @@
 
 
                     </div>
-                    <div class=" col 6 col-xl-11 container-fluid  app__container-col-11">
+                    <div class="col-11 container-fluid  app__container-col-11">
                         <h1 class="app__container-heading" id="app__container-mobile-responsive">
                             Danh sách các khóa học
                         </h1>
