--- a/message.html
+++ b/message.html
@@ -34,18 +34,18 @@
                         </a>
                     </li>
                     <li class="app__mess-head-item">
-                        <a href="" class="app__mess-head-link">
-                            <i class="fa-solid fa-user"></i>
-                        </a>
-                    </li>
-                    <li class="app__mess-head-item">
-                        <a href="" class="app__mess-head-link">
+                        <a href="Phần-LOTRINH.html" class="app__mess-head-link">
                             <i class="fa-solid fa-road"></i>
                         </a>
                     </li>
                     <li class="app__mess-head-item">
-                        <a href="" class="app__mess-head-link">
-                            <i class="fa-solid fa-lightbulb"></i>
+                        <a href="Phần-BANGTIN.html" class="app__mess-head-link">
+                            <i class="fa-solid fa-newspaper"></i>
+                        </a>
+                    </li>
+                    <li class="app__mess-head-item">
+                        <a href="message.html" class="app__mess-head-link">
+                            <i class="fa-regular fa-message"></i>
                         </a>
                     </li>
                 </ul>
