Ko co cap nhat moi

--- a/message.html
+++ b/message.html
@@ -63,7 +63,7 @@
                 </ul>
             </nav>
         </header>
-        <div class="app__mess-contact">
+        <div class="app__mess-navigation-up">
             <ul class="app__mess-contact-list">
                 <li class="app__mess-contact-item">
                     <a href="" class="app__mess-contact-link">Chat</a>
@@ -76,7 +76,7 @@
                 </li>
             </ul>
         </div>
-        <div class="app__mess-navigation">
+        <div class="app__mess-navigation-down">
             <ul class="app__mess-navigation-list">
                 <li class="app__mess-navigation-item">
                     <a href="#TanLo" class="app__mess-navigation-link">
